# P3P

./: .gitignore  CMakeLists.txt  README.md
include/: algorithms.h  base.h  camera.h
src/: algorithms.cpp  camera.cpp  main.cpp
